# contratoai

./: .Makefile  .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: daily-scrape.yml
apps/api/: main.py
apps/frontend/: .env.example  eslint.config.mjs  next.config.mjs  package.json  tailwind.config.ts
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/app/candidatos/: page.tsx
apps/frontend/src/app/disc/: page.tsx
apps/frontend/src/app/empresas/: page.tsx
apps/frontend/src/app/interview/: page.tsx
apps/frontend/src/app/jobs/: page.tsx
apps/frontend/src/app/leaderboard/: page.tsx
apps/frontend/src/app/login/: page.tsx
apps/frontend/src/app/matches/: page.tsx
apps/frontend/src/app/onboarding/: page.tsx
apps/frontend/src/app/post-job/: page.tsx
apps/frontend/src/app/pricing/: page.tsx
apps/frontend/src/app/profile/: page.tsx
apps/frontend/src/app/recruiter/: page.tsx
apps/frontend/src/components/animation/: AnimatedCounter.tsx  ScrollReveal.tsx
apps/frontend/src/lib/: demo-data.ts  types.ts  utils.ts
db/migrations/: 0001_init_schema.sql  0002_pgvector_indexes.sql  0003_rls_policies.sql  0004_match_function.sql  0005_gamification.sql  0006_intake_links.sql  0007_intake_storage.sql  0008_job_expiration.sql  0009_fix_auth_users_null_tokens.sql  0010_company_profiles.sql
db/seed/: 01_cities.sql  02_skills.sql  03_achievements.sql
design-system/: MASTER.md  monetization.md
design-system/pages/: dashboard.md  leaderboard.md  onboarding.md
docs/legal/: ley-81-compliance.md
infra/: Dockerfile.api  Dockerfile.scrapers  docker-compose.yml
(+47 files in other folders)
